# spark-catalyst-rs

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  rules.rs  trees.rs  types.rs
src/expr/: api.rs  arithmetic.rs  common.rs  literal.rs  logical.rs  mod.rs  reference.rs
